package kr.hhplus.concert.domain.model.seat;

public enum SeatStatus {
    AVAILABLE,
    PENDING,
    RESERVED
}
