classDiagram
    class Queue {
        -int id
        -long userId
        -string token
        -datetime expiredAt
        -datetime enteredAt
        +valiadateToken() boolean
    }

    class Concert {
        -long id
        -string name
        -string description
    }

    class Schedule {
        -long id
        -int concertId
        -date scheduleDate
        -time startTime
    }

    class Seat {
        -int id
        -int concertId
        -int scheduleId
        -int seatNumber
        -float price
        -SeatStatus status
    }

    class Reservation {
        -int id
        -int userId
        -int seatId
        -int scheduleId
        -ReservationStatus status
        -datetime reservedAt
        -datetime expiredAt
    }

    class Transaction {
        -int id
        -int userId
        -Payment type
        -float amount
        -float balance
        -Payment status
        -datetime processedAt
    }

    class SeatStatus {
        <<enumeration>>
        AVAILABLE
        RESERVED
    }

    class ReservationStatus {
        <<enumeration>>
        SUCCESS
        PENDING
        FAILED
    }

    class QueueStatusType {
        <<enumeration>>
        ACTIVE
        WAITING
        EXPIRED
    }

    class PaymentStatus {
        <<enumeration>>
        SUCCESS
        FAILED
    }

    Queue "1" -- "0..*" Reservation : has
    Queue "1" -- "0..*" Transaction : has
    Concert "1" -- "0..*" Schedule : has
    Schedule "1" -- "0..*" Seat : has
    Seat "1" -- "0..*" Reservation : has
    Reservation "1" -- "0..*" Transaction : has